Fix JEI casting recipes not showing (NPE on no-cast recipes)
IDisplayableCastingRecipe.getCastItems()/getRecipes() called getCast().items() with no null
check, but the cast ingredient is nullable (null = poured into an empty basin/table, e.g.
metal blocks, glass, clay). AbstractCastingCategory.setRecipe calls getCastItems() before the
isEmpty() guard, so every no-cast casting recipe threw NPE and JEI dropped it -> those recipes
didn't appear when looked up (R). Guard the nullable cast in ItemCastingRecipe.getCastItems()
and MaterialCastingRecipe.getRecipes().

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>